--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 	],
 	"require": {
 		"php": ">=5.6.15",
-		"yiisoft/yii2": "~2.0.7"
+		"yiisoft/yii2": "~2.0.7",
+		"yiisoft/yii2-imagine": "~2.0.0"
 	},
 	"autoload": {
 	    "psr-4": {
