--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 	"require": {
 		"php": ">=5.6.15",
 		"yiisoft/yii2": "~2.0.7",
-		"yiisoft/yii2-imagine": "~2.0.0"
+		"yiisoft/yii2-imagine": "~2.0.0",
+		"nesbot/carbon": "^1.22"
 	},
 	"autoload": {
 	    "psr-4": {
