--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "yii2-extension",
 	"description": "Commonly used widgets",
 	"homepage": "https://github.com/liuwanwei/yii2-widget",
-	"license": "Apache Version 2.0",
+	"license": "MIT",
 	"authors": [
 		{
 			"name": "liuwanwei",
