--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	],
 	"require": {
 		"php": ">=5.6.15",
-		"yiisoft/yii2": "~2.0.7",
+		"yiisoft/yii2": "~2.0.14",
 		"yiisoft/yii2-imagine": "~2.0.0",
 		"nesbot/carbon": "^1.22"
 	},
@@ -22,5 +22,9 @@
 	    "psr-4": {
 	        "buddysoft\\widget\\": ""
 	    }
+	},
+	"config": {
+		"process-timeout": 1800,
+		"discard-changes": true
 	}
 }
