--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 		"php": ">=5.6.15",
 		"yiisoft/yii2": "~2.0.14",
 		"yiisoft/yii2-imagine": "~2.0.0",
-		"nesbot/carbon": "^1.22",
+		"nesbot/carbon": "^2.59",
 		"mdmsoft/yii2-admin": "~2.0"
 	},
 	"autoload": {
@@ -26,6 +26,10 @@
 	},
 	"config": {
 		"process-timeout": 1800,
-		"discard-changes": true
+		"discard-changes": true,
+		"allow-plugins": {
+			"yiisoft/yii2-composer": true,
+			"kylekatarnls/update-helper": true
+		}
 	}
 }
