--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
 		"php": ">=5.6.15",
 		"yiisoft/yii2": "~2.0.14",
 		"yiisoft/yii2-imagine": "~2.0.0",
-		"nesbot/carbon": "^2.59",
-		"mdmsoft/yii2-admin": "~2.0"
+		"mdmsoft/yii2-admin": "~2.0",
+		"nesbot/carbon": "^3.8.0"
 	},
 	"autoload": {
 	    "psr-4": {
